--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@figma/my-make-file",
+  "name": "Work-Samples_khy",
+  "homepage": "https://489156.github.io/Work-Samples_khy/",
   "private": true,
   "version": "0.0.1",
   "type": "module",
